# knowledge-graph

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
docs/: architecture.md  passive-maintenance-convention.md
examples/: conversational_self_intro.txt  narrative_self_intro.txt
mcp_server/config/: config.kg.yaml  config.yaml
mcp_server/deploy/: .env.example  DEPLOY.md  Dockerfile.kg  docker-compose.remote.yml  nginx.kg.conf
mcp_server/src/: graphiti_mcp_server.py
mcp_server/src/kg/: __init__.py  chat_completions_client.py
mcp_server/src/models/: edge_types.py  entity_types.py
mcp_server/src/services/: factories.py
mcp_server/tests/: verify_migration_e2e.py
scripts/: demo_ingest.py  healthcheck.py  probe_endpoint.py  probe_generic_extraction.py  probe_structured_output.py  smoke_ingest.py  validate_ontology.py  verify_extraction_quality.py  verify_owner_injection.py  visualize_graph.py
src/kg/: __init__.py  chat_completions_client.py  connection.py  mcp_server.py  ontology.py  owner.py  sanitizing_driver.py
web/: .cta.json  .env.example  README.md  package.json  pnpm-lock.yaml
web/src/: styles.css
web/src/lib/: graph-theme.ts
web/src/routes/: index.tsx
web/src/server/: graph.ts  neo4j.ts
web/src/types/: graph.ts
