[project]
name = "knowledge-graph"
version = "0.1.0"
description = "Personal knowledge/capability graph maintained via conversations, built on Graphiti + Kùzu"
requires-python = ">=3.12"
dependencies = [
    "graphiti-core[kuzu]>=0.29.2",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kg"]
