[project]
name = "knowledge-graph"
version = "0.1.0"
description = "Personal knowledge/capability graph maintained via conversations, built on Graphiti + Neo4j"
requires-python = ">=3.12"
dependencies = [
    "graphiti-core>=0.29.2",
    "mcp>=1.28.1",
    "python-dotenv>=1.0.0",
    "pydantic-settings>=2.0.0",
    "pyyaml>=6.0.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kg"]
